--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         </div>
                         <nav data-da=".menu,992,last" class="header-nav">
                             <ul class="header-list">
-                                <li><a href="./html/about.html" class="header-link">О продукте</a></li>
+                                <li><a href="https://dgssdagdg.github.io/Samurai/html/about.html" class="header-link">О продукте</a></li>
                                 <li><a href="http://127.0.0.1:5500/html/reviews.html" class="header-link">Отзывы</a></li>
                                 <li><a href="http://127.0.0.1:5500/html/delivery.html" class="header-link">Доставка и оплата</a></li>
                                 <li><a href="http://127.0.0.1:5500/html/contact.html" class="header-link">Контакты</a></li>
