--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <div class="header-top">
                         <button class="menu-btn menu-button _icon-catalog" type="button" ></button>
                         <div class="header-top-logo">
-                            <a href="http://127.0.0.1:5500/index.html"><img src="./img/main/header/logo.png" alt=""></a>
+                            <a href="https://dgssdagdg.github.io/Samurai/index.html"><img src="./img/main/header/logo.png" alt=""></a>
                         </div>
                         <form data-da=".menu,767,first" action="#" class="header-top-form">
                             <span class="_icon-lupa"></span>
@@ -24,20 +24,20 @@
                         </form>
                         <div data-da=".header-end,992,last" class="header-top-tell _icon-tell">+7 495 221-06-75</div>
                         <button type="button" class="header-top-btn">Заказать звонок</button>
-                        <a href="http://127.0.0.1:5500/html/delivery.html" class="header-end-cart-two _icon-cart"></a>
+                        <a href="https://dgssdagdg.github.io/Samurai/html/delivery.html" class="header-end-cart-two _icon-cart"></a>
                     </div>
                     <div class="header-end">
                         
                         <div class="header-end-catalog menu-button">
                             <span class="_icon-catalog  menu-button-two"></span>
-                            <a href="http://127.0.0.1:5500/html/catalog.html" class="header-catalog">Каталог</a>
+                            <a href="https://dgssdagdg.github.io/Samurai/html/catalog.html" class="header-catalog">Каталог</a>
                         </div>
                         <nav data-da=".menu,992,last" class="header-nav">
                             <ul class="header-list">
                                 <li><a href="https://dgssdagdg.github.io/Samurai/html/about.html" class="header-link">О продукте</a></li>
-                                <li><a href="http://reviews.html" class="header-link">Отзывы</a></li>
-                                <li><a href="http://127.0.0.1:5500/html/delivery.html" class="header-link">Доставка и оплата</a></li>
-                                <li><a href="http://127.0.0.1:5500/html/contact.html" class="header-link">Контакты</a></li>
+                                <li><a href="https://dgssdagdg.github.io/Samurai/html/reviews.html" class="header-link">Отзывы</a></li>
+                                <li><a href="https://dgssdagdg.github.io/Samurai/html/delivery.html" class="header-link">Доставка и оплата</a></li>
+                                <li><a href="https://dgssdagdg.github.io/Samurai/html/contact.html" class="header-link">Контакты</a></li>
                             </ul>
                         </nav>
                         <div data-da=".header-end,992,last" class="header-end-city _icon-city">Москва <span class="header-city-arrow _icon-arrow-right"></span>
@@ -47,7 +47,7 @@
                                 <li><div class="header-city-item">Санкт Петербург</div></li>
                             </ul>
                         </div>
-                        <a href="http://127.0.0.1:5500/html/delivery.html" data-da=".header-end,992,last" class="header-end-cart _icon-cart">Моя корзина <span class="heaedr-end-cart-col">+1</span></a>
+                        <a href="https://dgssdagdg.github.io/Samurai/html/delivery.html" data-da=".header-end,992,last" class="header-end-cart _icon-cart">Моя корзина <span class="heaedr-end-cart-col">+1</span></a>
                     </div>
                     <div class="menu"></div>
                 </div>
@@ -223,7 +223,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -233,7 +233,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -243,7 +243,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -253,7 +253,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -263,7 +263,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -273,7 +273,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -283,7 +283,7 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                             <div class="cart-products">
@@ -293,11 +293,11 @@
                                     <div class="cart-price-new">23 000 ₽</div>
                                     <div class="cart-price-old">27 000 ₽</div>
                                 </div>
-                                <a href="http://127.0.0.1:5500/html/product.html" class="cart-btn">Добавить в корзину</a>
+                                <a href="https://dgssdagdg.github.io/Samurai/html/product.html" class="cart-btn">Добавить в корзину</a>
                                 <div class="cart-block"></div>
                             </div>
                         </div>
-                        <a href="http://127.0.0.1:5500/html/catalog.html" class="product-btn-all">Показать все</a>
+                        <a href="https://dgssdagdg.github.io/Samurai/html/catalog.html" class="product-btn-all">Показать все</a>
                     </div>
                 </div>
             </section>
@@ -412,7 +412,7 @@
                         
                     </div>
                 </div>
-                <img src="../img/main/test/fon.png" alt="" class="test-fon">
+                <img src="./img/main/test/fon.png" alt="" class="test-fon">
             </section>
             <section class="client">
                 <div class="container">
